refactor + update notes